Revision history for Perl extension Module::Build.

 - Fixed processing of INSTALLDIRS=whatever for compatibility
   Makefiles. [Spotted by John Peacock]

 - Zillions of special-cases have been added in Compat.pm for dealing
   with the special Makefile system on VMS. [John E. Malmberg]

 - Fixed some stuff in how VMS command-args get quoted. [John E. Malmberg]

 - VMS now overrides localize_file_path() and localize_dir_path() so
   we don't need to do special stuff in the general case. [John
   E. Malmberg]

 - Added a few more VMS-specific entries to the default MANIFEST.SKIP
   file that (sometimes) gets created during the 'manifest'
   action. [John E. Malmberg]

 - Fixed a catdir() that should have been a catfile() when creating a
   ppmdist. [John E. Malmberg]

 - Removed some assumptions about what makefiles are called (not
   necessarily "Makefile") and how they take their arguments, to get
   VMS tests working better. [John E. Malmberg]

 - Fixed our check for Archive::Tar in the t/runthrough.t test, which
   fixes a common failure on Win32. [Spotted by Chris Williams]

 - Fixed a File::Spec mal-ism in t/destinations.t [Craig A. Berry]

 - Exposed the internal ExtUtils::CBuilder object as part of our API,
   via the cbuilder() method. [Zefram]

 - Upgraded to version.pm 0.74 (fixes bug #30004.)

 - Overwrite core (post-5.9.4) Module::Build installs (bug #20528.)

 - Pass quiet() option to ExtUtils::CBuilder object.

0.2808_01 - Wed Oct 24 11:51:25 2007

 - All .pm files in the Module-Build distribution (except for
   M::B::Version.pm, which is kind of tied to version.pm) now have the
   same $VERSION number explicitly specified.

 - When checking prerequisites, the required version of perl is now
   checked before we start finding the $VERSION declaration of the
   distribution, which results in much more intuitive error messages
   e.g. if the author is using 5.6-isms in their declaration but the
   user doesn't have 5.6. [Slaven Rezic]
