@@ -1,5 +1,7 @@
 Revision history for Perl extension Module::Build.
 
+ - perl Build.PL --sign=1 now signs. [Michael G Schwern]
+
  - Fixed processing of INSTALLDIRS=whatever for compatibility
    Makefiles. [Spotted by John Peacock]
 
